--- a/AutoSShuttle.conf
+++ b/AutoSShuttle.conf
@@ -1,26 +1,21 @@
 # Enter the required data in the fields specified by ..._EDIT.
 # For example, if the IP address of your server is 1.1.1.1, the corresponding part of the server config will look like this:
-#       'ip': '1.1.1.1',
+# ip = 1.1.1.1
 
 
-# Server configurations
-servers = [
-    {
-        'name': 'name1_EDIT',
-        'ip': 'server_ip1_EDIT',
-        'port': 'ssh_port1_EDIT',
-        'username': 'server_username1_EDIT',
-        'password': 'server_password1_EDIT'
-    },
-    {
-        'name': 'name2_EDIT',
-        'ip': 'server_ip2_EDIT',
-        'port': 'ssh_port2_EDIT',
-        'username': 'server_username2_EDIT',
-        'password': 'server_password2_EDIT'
-    }
-]
+[Server1]
+name = name1_EDIT
+ip = server_ip1_EDIT
+port = ssh_port1_EDIT
+username = server_username1_EDIT
+password = server_password1_EDIT
 
-# System password
-system_password = "your_system_password_EDIT"
+[Server2]
+name = name2_EDIT
+ip = server_ip2_EDIT
+port = ssh_port2_EDIT
+username = server_username2_EDIT
+password = server_password2_EDIT
 
+[System]
+system_password = your_system_password_EDIT
